# japonfou

./: .gitignore  Cargo.toml  Dockerfile  build.rs
common/src/: lib.rs
common/src/config/: base_config.rs  id_generator_config.rs  mod.rs  postgres_config.rs  redis_config.rs
common/src/json/: customer.rs  mod.rs  order_item.rs  product.rs
common/src/util/: alias.rs  connections.rs  errors.rs  mod.rs  tools.rs
customer_services/: Cargo.toml
customer_services/src/: main.rs
customer_services/src/customer/: mod.rs
customer_services/src/customer/repos/: fake_repo.rs  mod.rs  postgres_repo.rs  repo.rs
customer_services/src/customer/services/: grpc_service.rs  service.rs
dockerfiles/: Dockerfile  entrypoint.sh
env/: .env
order_services/: Cargo.toml
order_services/src/: main.rs
order_services/src/order/: json.rs
order_services/src/order/repos/: mod.rs  postgres_repo.rs  repo.rs
order_services/src/order/services/: grpc_service.rs  service.rs
product_services/: Cargo.toml
product_services/src/: main.rs
product_services/src/product/repos/: mod.rs  postgres_repo.rs  repo.rs
product_services/src/product/services/: grpc_service.rs  mod.rs  service.rs
proto/: customer.proto  order.proto  product.proto  types.proto
web_api_gateway/src/: main.rs
web_api_gateway/src/customer/: json.rs  routes.rs
web_api_gateway/src/customer/handlers/: v1.rs
web_api_gateway/src/order/: json.rs  routes.rs
web_api_gateway/src/order/handlers/: v1.rs
web_api_gateway/src/product/: json.rs  routes.rs
web_api_gateway/src/product/handlers/: v1.rs
web_api_gateway/src/util/: alias.rs  env.rs  error.rs  mod.rs  recover.rs
web_api_gateway/src/util/middleware/: with_env.rs
