[package]
name = "japonfou"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "common/src/lib.rs"

[[bin]]
name = "customer_services"
path = "customer_services/src/main.rs"

[[bin]]
name = "product_services"
path = "product_services/src/main.rs"

[[bin]]
name = "order_services"
path = "order_services/src/main.rs"

[[bin]]
name = "web_api_gateway"
path = "web_api_gateway/src/main.rs"

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.futures]
version = "*"

[dependencies.warp]
version = "*"
features = ["tokio-rustls", "compression-gzip", "websocket"]

[dependencies.warp-reverse-proxy]
version = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.serde_repr]
version = "*"

[dependencies.sqlx]
version = "*"
features = ["runtime-tokio-rustls", "all-types", "postgres"]

[dependencies.chrono]
version = "*"
features = ["serde"]

[dependencies.uuid]
version = "*"
features = ["v4", "serde"]

[dependencies.rust_decimal]
version = "*"
features = ["serde"]

[dependencies.async-trait]
version = "*"

[dependencies.sea-query]
version = "*"
features = ["derive", "postgres-types", "postgres-uuid", "postgres-chrono"]

[dependencies.tracing]
version = "*"

[dependencies.tracing-subscriber]
version = "*"

[dependencies.tracing-appender]
version = "*"

[dependencies.thiserror]
version = "*"

[dependencies.anyhow]
version = "*"

[dependencies.dotenv]
version = "*"

[dependencies.tonic]
version = "*"

[dependencies.prost]
version = "*"

[dependencies.r2d2_redis]
version = "*"

[dependencies.lazy_static]
version = "*"

[dependencies.snowflake]
git = "https://github.com/boris-lok/snowflake"
branch = "master"

[build-dependencies]
tonic-build = "*"
